-- =====================================================
-- 02. OLAP / DWH DDL
-- Case: Star Schema for Credit Application Analytics
-- Database: PostgreSQL
-- Purpose: historical analysis, reporting, aggregation
-- =====================================================

DROP SCHEMA IF EXISTS dwh CASCADE;
CREATE SCHEMA dwh;
SET search_path TO dwh;

-- Date dimension: reused by application_date, due_date, payment_date, etc.
CREATE TABLE dim_date (
    date_key        INT PRIMARY KEY,       -- format: YYYYMMDD
    full_date       DATE NOT NULL UNIQUE,
    day_of_month    INT NOT NULL,
    month_number    INT NOT NULL,
    month_name      VARCHAR(20) NOT NULL,
    quarter_number  INT NOT NULL,
    year_number     INT NOT NULL
);

CREATE TABLE dim_branch (
    branch_key      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    branch_id       BIGINT NOT NULL UNIQUE, -- source OLTP id
    branch_code     VARCHAR(20) NOT NULL,
    branch_name     VARCHAR(100) NOT NULL,
    region          VARCHAR(100) NOT NULL,
    city            VARCHAR(100) NOT NULL
);

CREATE TABLE dim_user (
    user_key        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id         BIGINT NOT NULL UNIQUE, -- source OLTP id
    employee_number VARCHAR(30) NOT NULL,
    full_name       VARCHAR(100) NOT NULL,
    role            VARCHAR(50) NOT NULL,
    branch_code     VARCHAR(20) NOT NULL
);

CREATE TABLE dim_customer (
    customer_key    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id     BIGINT NOT NULL UNIQUE, -- source OLTP id
    customer_number VARCHAR(30) NOT NULL,
    full_name       VARCHAR(100) NOT NULL,
    gender          VARCHAR(10) NOT NULL,
    city            VARCHAR(100) NOT NULL,
    income_band     VARCHAR(30) NOT NULL    -- simplified analytic attribute
);

CREATE TABLE dim_dealer (
    dealer_key      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    dealer_id       BIGINT NOT NULL UNIQUE, -- source OLTP id
    dealer_code     VARCHAR(20) NOT NULL,
    dealer_name     VARCHAR(100) NOT NULL,
    city            VARCHAR(100) NOT NULL
);

CREATE TABLE dim_vehicle (
    vehicle_key     BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vehicle_id      BIGINT NOT NULL UNIQUE, -- source OLTP id
    brand           VARCHAR(50) NOT NULL,
    model           VARCHAR(100) NOT NULL,
    vehicle_type    VARCHAR(50) NOT NULL,
    price_band      VARCHAR(30) NOT NULL    -- simplified analytic attribute
);

-- Fact 1: application-level analysis
CREATE TABLE fact_credit_application (
    application_fact_key BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    application_id       BIGINT NOT NULL UNIQUE, -- source OLTP id
    application_number   VARCHAR(30) NOT NULL,

    application_date_key INT NOT NULL REFERENCES dim_date(date_key),
    approval_date_key    INT REFERENCES dim_date(date_key),
    disbursement_date_key INT REFERENCES dim_date(date_key),

    customer_key         BIGINT NOT NULL REFERENCES dim_customer(customer_key),
    branch_key           BIGINT NOT NULL REFERENCES dim_branch(branch_key),
    dealer_key           BIGINT NOT NULL REFERENCES dim_dealer(dealer_key),
    vehicle_key          BIGINT NOT NULL REFERENCES dim_vehicle(vehicle_key),
    surveyor_user_key    BIGINT NOT NULL REFERENCES dim_user(user_key),

    status               VARCHAR(20) NOT NULL,
    requested_amount     NUMERIC(15,2) NOT NULL,
    tenor_months         INT NOT NULL,

    application_count    INT NOT NULL DEFAULT 1,
    approved_count       INT NOT NULL,
    rejected_count       INT NOT NULL,
    disbursed_count      INT NOT NULL
);

-- Fact 2: installment schedule / receivable analysis
CREATE TABLE fact_installment (
    installment_fact_key BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    installment_id       BIGINT NOT NULL UNIQUE, -- source OLTP id
    application_id       BIGINT NOT NULL,
    application_number   VARCHAR(30) NOT NULL,

    due_date_key         INT NOT NULL REFERENCES dim_date(date_key),
    customer_key         BIGINT NOT NULL REFERENCES dim_customer(customer_key),
    branch_key           BIGINT NOT NULL REFERENCES dim_branch(branch_key),

    installment_no       INT NOT NULL,
    principal_amount     NUMERIC(15,2) NOT NULL,
    interest_amount      NUMERIC(15,2) NOT NULL,
    total_due            NUMERIC(15,2) NOT NULL,
    status               VARCHAR(20) NOT NULL,

    installment_count    INT NOT NULL DEFAULT 1,
    paid_installment_count INT NOT NULL
);

-- Fact 3: payment / collection analysis
CREATE TABLE fact_payment (
    payment_fact_key     BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    payment_id           BIGINT NOT NULL UNIQUE, -- source OLTP id
    installment_id       BIGINT NOT NULL,
    application_id       BIGINT NOT NULL,
    application_number   VARCHAR(30) NOT NULL,

    payment_date_key     INT NOT NULL REFERENCES dim_date(date_key),
    customer_key         BIGINT NOT NULL REFERENCES dim_customer(customer_key),
    branch_key           BIGINT NOT NULL REFERENCES dim_branch(branch_key),

    payment_channel      VARCHAR(30) NOT NULL,
    amount_paid          NUMERIC(15,2) NOT NULL,
    payment_count        INT NOT NULL DEFAULT 1
);

-- Fact 4: audit activity analysis
CREATE TABLE fact_audit_activity (
    audit_fact_key       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    audit_id             BIGINT NOT NULL UNIQUE, -- source OLTP id
    application_id       BIGINT NOT NULL,
    application_number   VARCHAR(30) NOT NULL,

    activity_date_key    INT NOT NULL REFERENCES dim_date(date_key),
    branch_key           BIGINT NOT NULL REFERENCES dim_branch(branch_key),
    user_key             BIGINT NOT NULL REFERENCES dim_user(user_key),

    activity_type        VARCHAR(50) NOT NULL,
    activity_count       INT NOT NULL DEFAULT 1
);
